--- a/client/src/pages/chat/styles.module.css
+++ b/client/src/pages/chat/styles.module.css
@@ -1,5 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap");
+
 .chatContainer {
-  max-width: 1100px;
+  width: 80%;
   margin: 0 auto;
   display: grid;
   grid-template-columns: 1fr 4fr;
@@ -8,25 +11,36 @@
 
 /* Room and users component */
 .roomAndUsersColumn {
-  border-right: 1px solid #dfdfdf;
+  border-right: 1px solid #e5f9e0;
+  height: 80vh;
+  margin: auto;
+  margin-right: 40px;
+  padding-right: 40px;
+  position: relative;
 }
 .roomTitle {
-  margin-bottom: 60px;
+  font-family: "Montserrat", sans-serif;
   text-transform: uppercase;
-  font-size: 2rem;
-  color: #fff;
+  font-size: 2.5rem;
+  color: #e5f9e0;
 }
 .usersTitle {
-  font-size: 1.2rem;
-  color: #fff;
+  font-family: "Montserrat", sans-serif;
+  line-height: 2rem;
+  font-size: 2rem;
+  color: #e5f9e0;
+  margin-bottom: -8px;
 }
 .usersList {
+  background: rgba(45, 45, 45, 1);
+  font-family: "Montserrat", sans-serif;
   list-style-type: none;
-  padding-left: 0;
-  margin-bottom: 60px;
-  color: rgb(153, 217, 234);
+  padding: 20px;
+  border-radius: 10px;
+  color: #a3f7b5;
 }
 .usersList li {
+  font-size: 1.5rem;
   margin-bottom: 12px;
 }
 
@@ -37,29 +51,45 @@
   padding: 10px 10px 10px 40px;
 }
 .message {
-  background: rgb(0, 24, 111);
-  border-radius: 6px;
+  background: #1f645f;
+  border-radius: 10px;
   margin-bottom: 24px;
-  max-width: 600px;
+  width: 90%;
   padding: 12px;
 }
+.message_bot {
+  width: 90%;
+  margin-bottom: 20px;
+  border-bottom: 1px solid #4e4d4d;
+}
+.message_bot .msgMeta {
+  color: #4e4d4d;
+}
+
 .msgMeta {
-  color: rgb(153, 217, 234);
+  color: #a3f7b5;
   font-size: 0.75rem;
+
+  font-family: "Montserrat", sans-serif;
 }
 .msgText {
-  color: #fff;
+  color: #e5f9e0;
+  font-family: "Montserrat", sans-serif;
 }
 
 /* Message input and button */
 .sendMessageContainer {
-  padding: 16px 20px 20px 16px;
+  padding: 10px 10px 10px 40px;
+  width: 100%;
 }
 .messageInput {
-  padding: 14px;
-  margin-right: 16px;
-  width: 60%;
-  border-radius: 6px;
-  border: 1px solid rgb(153, 217, 234);
-  font-size: 0.9rem;
+  margin-right: 10px;
+  width: 70%;
+  height: 60px;
+  padding: 10px;
+  border-radius: 10px;
+  border: 0;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  font-size: 1.2rem;
+  font-family: "Montserrat", sans-serif;
 }
